# edge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: atari-toolchain.cmake  generate_bytes_header.cmake  generate_charset_header.cmake  mos-sim-toolchain.cmake
demo/: PREPPIEPC_FNT.h  README.md  atari_hw_test.cpp  atari_mode4_geometry_probe.cpp  atari_scroll_test.cpp  edge_net_realtime_meter.cpp  hw_test.cpp  multiplex_demo.cpp  native_gfx.cpp  user_charset.h  vbxe_bringup.cpp  vbxe_gfx.cpp  vbxe_sprites_over_bitmap.cpp  vbxe_text.cpp
demo/arena/: arena.cpp  arena_native.cpp  arena_shared.h  arena_vbxe.cpp
demo/fujinet_net_test/: fujinet_net_test.cpp
demo/fujinet_session_validate/: README.md  fujinet_session_validate.cpp
demo/net_dual_lane/: net_dual_lane.cpp
demo/tank/: ASSET_PROTOCOL.md  asset_loader.h  asset_protocol.h  atari_tank_demo.cpp  net_session_loader.h  playfield_assets.h  playfield_geometry.h  tank_camera.h  tank_motion.h  tank_palette.h  tank_shapes.h
demo/tank/assets/: PROVENANCE.md  chunk_0_0.m4c  chunk_0_0.scr  chunk_0_1.m4c  chunk_0_1.scr  chunk_1_0.m4c  chunk_1_0.scr  chunk_1_1.m4c  chunk_1_1.scr  tank_tiles.tid  tank_tileset.chs  tank_tileset.fnt
demo/tank_dual_net/: README.md  atari_tank_dual_net_demo.cpp
demo/tank_net/: adversary_net.h  atari_tank_net_demo.cpp
demo/tools/: position_server.py
docs/: API DESIGN.md  API_DESIGN.md  ARCHITECTURE.md  CONSTRAINTS.md  DECISIONS.md  HANDOFF_netstream_downstream_pacing.md
documents/: API_REFERENCE.md  PLATFORM_ATARI.md  QUICK_START.md  README.md
engine/: attributes.h  audio_defs.h  core.h  display.h  display_traits.h  engine.h  gfx.h  hooks.h  input.h  interrupt.h  loop.h  math.h  mmio.h  net.h  net_api.h  net_ring.h  net_types.h  pool.h  screen.h  scroll.h  sound.h  sprites.h  tiles.h  types.h  version.h
engine/config/: capabilities.h
engine/platform/atari/: antic.h  display_list.h  display_traits.h  dli_dispatch.h  fujinet.h  fujinet_netstream_constants.inc  fujinet_netstream_handler.S  fujinet_netstream_realtime.h  fujinet_netstream_realtime_abi.h  fujinet_netstream_realtime_abi.s  fujinet_session_fujinetlib.h  gtia.h  hal.h  laoo_palette.h  modes.h  nmi.h  os.h  pia.h  platform.h  pm.h  pokey.h  pokeymax.h  registers.h  vbxe.h  vbxe_blitter.h  vbxe_config.h  vbxe_layout.h  vbxe_memac.h  vbxe_overlay.h  vbxe_palette.h  vbxe_registers.h  vbxe_xdl.h
scripts/: altirra_probe.sh  altirra_screenshot.sh  build_demos.sh  bump-version.sh  netstream_modeb_peer.sh  run_demo.sh  run_tank_embedded.sh  run_tank_networked.sh  setup.sh
scripts/lib/: atari_emu.sh
tests/: CMakeLists.txt  test_core.cpp  test_input.cpp  test_interrupt.cpp  test_pool.cpp  test_screen.cpp  test_scroll.cpp  test_sound.cpp  test_sprites.cpp  test_tiles.cpp
tests/backends/atari/: CMakeLists.txt  atari_hostdump.h  fujinetlib_session_smoke.cpp  netstream_adapter_altirra_probe.cpp  netstream_datapath_altirra_probe.cpp  netstream_init_altirra_probe.cpp  netstream_peer_echo.py  netstream_txirq_diag_probe.cpp  netstream_vectors_altirra_probe.cpp  test_atari_core.cpp  test_atari_display.cpp  test_atari_fujinet_netstream_scaffold.cpp  test_atari_fujinet_session_send_nb.cpp  test_atari_fujinet_session_spec.cpp  test_atari_interrupt.cpp  test_atari_net_seam.cpp  test_atari_scroll.cpp  test_netstream_abi_atari_link_smoke.cpp  test_netstream_abi_smoke.cpp  test_netstream_adapter_lifecycle.cpp  test_netstream_detect_pal.cpp  test_netstream_init_marshal.cpp  test_netstream_init_prepare.cpp  test_netstream_irq_arm.cpp  test_netstream_lifecycle.cpp  test_netstream_rx_ring.cpp  test_netstream_state_size.cpp  test_netstream_status.cpp  test_netstream_swap_vector.cpp  test_netstream_tx_prime.cpp  test_netstream_tx_ring.cpp  test_netstream_tx_space.cpp  test_netstream_vectors.cpp  test_platform.cpp  test_vbxe.cpp  test_vbxe_integration.cpp
tests/generic/: CMakeLists.txt  test_adversary_net.cpp  test_asset_loader.cpp  test_core.cpp  test_gfx.cpp  test_input.cpp  test_interrupt.cpp  test_math.cpp  test_mode4_geometry.cpp  test_net_api.cpp  test_net_capabilities.cpp  test_net_rings.cpp  test_net_session_loader.cpp  test_screen.cpp  test_scroll.cpp  test_sound.cpp  test_sprites.cpp  test_tank_camera.cpp  test_tank_motion.cpp  test_tank_playfield.cpp  test_tiles.cpp
tools/mode4/: README.md  mode4_convert.py
tools/net/: README.md  edge_realtime_peer.py  edge_tank_adversary.py  edge_tank_asset_server.py  edge_tank_dual_server.py
